--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-	box-sizing: border-box; 
+	box-sizing: border-box;
 	/* This makes the widths of elements more consistent
 		Full details here https://css-tricks.com/box-sizing/ */
 }
@@ -7,6 +7,13 @@
 body{
 	margin: 0px; /* Often browsers have a 5px margin by deafult*/
 	font-family: sans-serif;
+}
+
+.cityimg{
+	position: absolute;
+	top:-50px;
+	right:70px;
+	color:black;
 }
 
 section{
@@ -19,16 +26,16 @@ section{
 
 header{
 	background-color: darkOrange;
-	color: white; /* more readable on an orange background */
+	color: white;  more readable on an orange background
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
-
+/* pale orange
 nav{
 	width: 100%;
 	height: 60px;
 	background-color: wheat;
-}
+} */
 
 nav a, nav h3{
 	float: left;
@@ -77,4 +84,97 @@ nav a:hover{
 
 .padded{
 	padding: 20px; /* I add this to cells to add a little padding*/
+}
+
+.circle {
+  height: 200px;
+  width: 200px;
+  background-color: black;
+  border-radius: 50%;
+  position: relative;
+  top:10px;
+  right:-10px;
+}
+
+.headcolor{
+	color: white;
+	position: absolute;
+  top:35px;
+  left:10px;
+  font-family: "Arial Black";
+  font-size: 36px;
+
+}
+
+.headcolor2{
+	color: white;
+	position: absolute;
+  top:70px;
+  left:20px;
+  font-family: "Arial Black";
+  font-size: 40px;
+
+}
+
+#line {
+	height:0.5px;
+	background-color:#03f;
+  margin-top:-200px; /* I can't position this three pixels under text */
+
+}
+
+.one{
+	position: absolute;
+	top:110px;
+	right:420px;
+	color:white;
+  text-decoration: none;
+	border: 1px solid black;
+   border-radius: 10px;
+	 background: black;
+
+}
+
+.two{
+	position: absolute;
+	top:110px;
+	right:220px;
+	color:white;
+	border: 1px solid black;
+	 border-radius: 10px;
+	 background: black;
+
+}
+
+.three{
+	position: absolute;
+	top:110px;
+	right:70px;
+	color:white;
+	border: 1px solid black;
+	 border-radius: 10px;
+	 background: black;
+
+}
+
+.Intro{
+	font-size: 70px;
+	position: relative;
+	left:90px;
+	top:20px;
+}
+
+.Intro1{
+	font-size: 60px;
+	position: relative;
+	left:100px;
+	top:-60px;
+}
+
+.intro2{
+	font-size: 20px;
+width: 500px;
+	position: relative;
+	left:100px;
+	top:160px;
 }
