--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ nav a:hover{
 	right:420px;
 	color:white;
   text-decoration: none;
-	border: 1px solid black;
+	border: 1px solid white;
    border-radius: 10px;
 	 background: black;
 
@@ -142,7 +142,7 @@ nav a:hover{
 	top:5.7%;
 	right:220px;
 	color:white;
-	border: 1px solid black;
+	border: 1px solid white;
 	 border-radius: 10px;
 	 background: black;
 
@@ -153,7 +153,7 @@ nav a:hover{
 	top:5.7%;
 	right:70px;
 	color:white;
-	border: 1px solid black;
+	border: 1px solid white;
 	 border-radius: 10px;
 	 background: black;
 
@@ -205,4 +205,21 @@ nav a:hover{
 	padding: 100px;
 	padding-bottom: 100px;
 }
+
+.one:hover{
+	 background-color: rgba(0, 0, 0, 0.1);
+	 color: black;
+}
+
+
+.two:hover{
+	 background-color: rgba(0, 0, 0, 0.1);
+	 color: black;
+}
+
+.three:hover{
+	 background-color: rgba(0, 0, 0, 0.1);
+	 color: black;
+}
+
 
