--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
 	margin: 0px; /* Often browsers have a 5px margin by deafult*/
 	font-family: sans-serif;
+	 background-color: rgb(255, 255, 251);
 }
 
 .cityimg{
@@ -127,16 +128,75 @@ nav a:hover{
 
 .t1{
 	position: absolute;
-	top: 30%;
-    right: 30%;
-	width: 20%;
+	top: 25%;
+    right: 25%;
+	width: 30%;
 }
 
 .t3{
 	position: absolute;
 	top: 40%;
-    right: 70%;
-	width: 10%;
+    right: 60%;
+	width: 15%;
+}
+
+.s4{
+	position: absolute;
+	top: 25%;
+    right: 30%;
+	width: 20%;
+}
+
+.cars{
+	position: absolute;
+	top: 70%;
+    right: 30%;
+	width: 20%;
+}
+
+.cc2{
+	position: absolute;
+	top: 20%;
+    right: 30%;
+	width: 25%;
+}
+
+.car{
+	position: absolute;
+	top: 0%;
+    left: 0%;
+	width: 15%;
+}
+
+.came{
+	position: absolute;
+	top: 20%;
+    right: 0%;
+	width: 15%;
+}
+
+.street{
+	position: absolute;
+	top: 0%;
+    left: 0%;
+	height: 100%;
+	width: 30%;
+	opacity: 0.5;
+}
+
+
+.camera2{
+	position: absolute;
+	top: 60%;
+    left: 80%;
+	width: 15%;
+}
+
+.test{
+	position: absolute;
+	top: 0%;
+    left: 0%;
+	width: 20%;
 }
 
 .trans{
@@ -153,13 +213,21 @@ nav a:hover{
     left: 35%;
 }
 
+.trans3{
+	font-size:440%;
+	position: absolute;
+    top:2%;
+    left: 25%;
+}
+
 .t_explan{
 	width: 400px;
 	color: white;
 	font-size:100%;
 	position: absolute;
-    top:50%;
-    left: 80%;
+    top:47%;
+    left: 75%;
+    font-family: Verdana;
 }
 
 .t_explan2{
@@ -167,8 +235,9 @@ nav a:hover{
 	color: white;
 	font-size:100%;
 	position: absolute;
-    top:65%;
+    top:62%;
     left: 5%;
+    font-family: Verdana;
 }
 
 
@@ -180,7 +249,7 @@ nav a:hover{
 	color:white;
     text-decoration: none;
 	border-radius: 10px;
-    background: black;
+    background: rgba(0,0,0,0.8);
     width: 7%;
     height: 5%;  
     text-align: center;
@@ -244,7 +313,7 @@ nav a:hover{
 	font-size:900%;
 	position: absolute;
     top:30%;
-    right: 50%
+    right: 50%;
 }
 
 .Intro1{
@@ -261,6 +330,7 @@ nav a:hover{
 	position: relative;
 	left:100px;
 	top:120px;
+	font-family: Verdana;
 }
 
 .Layer_1 {
@@ -361,7 +431,7 @@ left: 10%;
 
 .square {
   height: 20%;
-  width: 100%;
+  width: 40%;
   background-color:black;
   position: absolute;
   left: 60%;
@@ -370,7 +440,7 @@ left: 10%;
 
   .square2 {
   height: 20%;
-  width: 100%;
+  width: 50%;
   background-color:black;
   position: absolute;
   right: 50%;
